# automatedContentCreator

./: .gitignore  README.md  contentCreationWorkflow.json  cred.txt  preferredScrapingChannels.txt  pyproject.toml  scrape_reddit.py  telegram_scraper_session.session
app/: main.py
footballapiscapers/: league.py  match.py  match_schema.json  player.py
imageAPIscrapers/: gettyimage.py  meme_imgflip.py
imageGeneration/: editImage.py
oldScripts/: scrapeSkySportsTelegram.py
socialapiscrapers/: scrapeInstagramPage.py  scrapeTelegramChannel.py  settings.json
